# FuseRule

./: .fuserule_history  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  docker-compose.yaml  fuse_rule_config.yaml
.github/workflows/: ci.yml
agents/: Cargo.toml
agents/src/: lib.rs
benches/: rule_evaluation.rs
cli/: Cargo.toml
cli/src/: cli.rs  debugger.rs  main.rs  repl.rs  server.rs
connectors/: Cargo.toml
connectors/src/: lib.rs
core/: Cargo.toml
core/src/: agent.rs  config.rs  coverage.rs  lib.rs  rule.rs  udf.rs
core/src/observability/: audit.rs  mod.rs  tests.rs  trace_store.rs  tracing.rs
core/src/rule_graph/: chain.rs  conditional_action.rs  correlation.rs  dag.rs  dynamic_predicate.rs  mod.rs
docs/: ARCHITECTURE.md  OBSERVABILITY.md  RULE_WORKFLOWS.md
examples/: Cargo.toml  basic_usage.rs  demo.rs  programmatic_rules.rs  v2_persistence_demo.rs  v3_window_demo.rs  v4_config_demo.rs
fuserule_state/: db
scripts/: generate_completions.sh
src/: agent.rs  agent_queue.rs  cli.rs  config.rs  debugger.rs  evaluator.rs  ingestion.rs  lib.rs  main.rs  metrics.rs  repl.rs  rule.rs  server.rs  state.rs  window.rs
test_state/: db  snap.00000000000001C8
test_state2/: db  snap.0000000000000340
tests/: Cargo.toml  integration_test.rs  property_test.proptest-regressions  property_test.rs  udf_test.rs  unit_test.rs
tests/benches/: rule_evaluation.rs
tests/test_state/: db  snap.00000000000000BA
tests/test_state2/: db  snap.0000000000000118
tests/tests/: integration_test.rs  property_test.rs  udf_test.rs  unit_test.rs
