[package]
name = "arrow-rule-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Arrow and DataFusion
arrow = "53.0"
datafusion = "42.0"
arrow-json = "53.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async
tokio = { version = "1.0", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
sled = "0.34"
serde_json = "1.0"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
handlebars = "5.1"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
