[workspace]
resolver = "2"
members = [
    "core",
    "agents",
    "connectors",
    "cli"
]

[workspace.dependencies]
arrow = "53.0"
arrow-json = "53.0"
datafusion = "42.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
config = "0.14"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
handlebars = "6.2" # Updated
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rustyline = "14.0" 
futures = "0.3"
sled = "0.34"
env_logger = "0.11"
tempfile = "3.10"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
lazy_static = "1.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
