[package]
name = "fuse-rule-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse-rule-core = { path = "../core" }
reqwest = { workspace = true }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }
