[package]
name = "fuse-rule-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuse-rule"
path = "src/main.rs"

[dependencies]
fuse-rule-core = { path = "../core" }
fuse-rule-agents = { path = "../agents" }
fuse-rule-connectors = { path = "../connectors" }
clap = { workspace = true }
clap_complete = { workspace = true }
rustyline = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
env_logger = { workspace = true }
arrow = { workspace = true }
arrow-json = { workspace = true }
chrono = { workspace = true }
