[package]
name = "fuse-rule-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse-rule-core = { path = "../core" }
rdkafka = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow-json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
